--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "request": "^2.73.0"
+    "request": "^2.73.0",
+    "lodash": "3.10.1"
   }
 }
