--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "googleapis": "^27.0.0",
+    "lodash": "4.17.11",
     "request": "^2.73.0",
-    "lodash": "4.17.11"
+    "async": "2.6.1"
   }
 }
